# early_console

./: .gitignore  Cargo.toml  README.json  README.md  test.sh
early_console/: Cargo.toml
early_console/src/: lib.rs
rt_early_console/: Cargo.toml  test_subsystem.sh
src/: lib.rs  time.rs
src/platform/: mod.rs
src/platform/aarch64_qemu_virt/: mod.rs
src/platform/riscv64_qemu_virt/: mod.rs  time.rs
src/platform/x86_pc/: mod.rs  uart16550.rs
